# cafe_menu

./: main.py  pyproject.toml
alembic/: env.py
api_v1/: __init__.py  base_crud.py  dependencies.py
api_v1/dish/: crud.py  router.py  schemas.py
api_v1/menu/: crud.py  dependencies.py  router.py  schemas.py
api_v1/sub_menu/: crud.py  dependencies.py  router.py  schemas.py
api_v1/user/: router.py  schemas.py  utils.py
auth/: utils.py
src/: config.py  database.py
src/dish/: models.py
src/menu/: models.py
src/sub_menu/: models.py
src/user/: models.py
