[tool.poetry]
name = "cafe-menu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
